# legibright-trust-audit

./: .env.example  .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
contrib/: README.md
contrib/pr1-datahub-skills/: BODY.md  PR_DESCRIPTION.md
contrib/pr2-datahub-docs-sqlite/: BODY.md  PR_DESCRIPTION.md
demo/: RECORDING_GUIDE.md  SCRIPT.md  TITLE_CARDS.md  reset_demo.sh  run_demo.sh  scenario.md
docs/: CONCEPTS.md  GENERALITY.md  OSS_CONTRIBUTION.md  PLAN.md  RUBRIC.md  SUBMISSION.md  VERIFICATION.md
docs/archive/: PLAN-stoxrahack-arsiv.md  README-stoxrahack-edgeauditor-arsiv.md
docs/assets/: BRAND.md
docs/upstream/: README.md  RFC-statistical-honesty-assertions.md  docs-sqlite-profiling-fix.md
examples/: README.md  bikeshare_report.md  bikeshare_verdict.json  matches_report.md  matches_verdict.json  mcp_audit_dataset_example.md  titanic_report.md  titanic_verdict.json
ingest/: sqlite_to_datahub.py
ingest/recipes/: generality.yml  iddaa.yml  matches.yml  revenue.yml  tr_odds.yml
scripts/: audit_auto.py  bench_scale.py  cleanup_incidents.py  demo_revenue.py  demo_writeback.py  fetch_data.py  gen_examples.py  generality_check.py  mcp_config.json  milestone1.py  quickstart_up.sh  seed_queries.py  sentinel_scan.py  set_agent_avatar.py  verify_all.py
skills/datahub-trust-audit/: SKILL.md  audit-workflow.md  mcp-tools.md
src/trust_layer/: __init__.py  (+8 more)
tests/: test_checks.py  test_leakage_hardening.py  test_robustness.py  test_sentinel.py  test_split_inference.py  test_trust_score.py  test_writeback_owner.py
(+16 files in other folders)
